versions/v2.8/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
= About Provisioning Drivers

Drivers in Rancher allow you to manage which providers can be used to deploy xref:../../../cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters] or xref:../../../cluster-deployment/infra-providers/infra-providers.adoc[nodes in an infrastructure provider] to allow Rancher to deploy and manage Kubernetes.

== Rancher Drivers

With Rancher drivers, you can enable/disable existing built-in drivers that are packaged in Rancher. Alternatively, you can add your own driver if Rancher has not yet implemented it.

There are two types of drivers within Rancher:

* <<_cluster_drivers,Cluster Drivers>>
* <<_node_drivers,Node Drivers>>

== Cluster Drivers

Cluster drivers are used to provision xref:../../../cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters], such as GKE, EKS, AKS, etc.. The availability of which cluster driver to display when creating a cluster is defined based on the cluster driver's status. Only `active` cluster drivers will be displayed as an option for creating clusters for hosted Kubernetes clusters. By default, Rancher is packaged with several existing cluster drivers, but you can also create custom cluster drivers to add to Rancher.

By default, Rancher has activated several hosted Kubernetes cloud providers including:

* xref:../../../cluster-deployment/hosted-kubernetes/eks/eks.adoc[Amazon EKS]
* xref:../../../cluster-deployment/hosted-kubernetes/gke/gke.adoc[Google GKE]
* xref:../../../cluster-deployment/hosted-kubernetes/aks/aks.adoc[Azure AKS]

There are several other hosted Kubernetes cloud providers that are disabled by default, but are packaged in Rancher:

* xref:../../../how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/alibaba.adoc[Alibaba ACK]
* xref:../../../how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/huawei.adoc[Huawei CCE]
* xref:../../../how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/tencent.adoc[Tencent]

== Node Drivers

Node drivers are used to provision hosts, which Rancher uses to launch and manage Kubernetes clusters. A node driver is the same as a https://docs.docker.com/machine/drivers/[Docker Machine driver]. The availability of which node driver to display when creating node templates is defined based on the node driver's status. Only `active` node drivers will be displayed as an option for creating node templates. By default, Rancher is packaged with many existing Docker Machine drivers, but you can also create custom node drivers to add to Rancher.

If there are specific node drivers that you don't want to show to your users, you would need to de-activate these node drivers.

Rancher supports several major cloud providers, but by default, these node drivers are active and available for deployment:

* xref:../../../cluster-deployment/infra-providers/aws/aws.adoc[Amazon EC2]
* xref:../../../cluster-deployment/infra-providers/azure/azure.adoc[Azure]
* xref:../../../cluster-deployment/infra-providers/digitalocean/digitalocean.adoc[Digital Ocean]
* xref:../../../cluster-deployment/infra-providers/vsphere/vsphere.adoc[vSphere]

There are several other node drivers that are disabled by default, but are packaged in Rancher:

* xref:../../../integrations/harvester/overview.adoc#_harvester_node_driver/[Harvester], available as of Rancher v2.6.1
