versions/v2.9/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
= About Provisioning Drivers
:page-languages: [en, zh]
:revdate: 2025-06-20
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/index.adoc 
:product-path: rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
ifeval::["{build-type}" != "community"]
:xref-harvester-overview: xref:integrations/harvester/overview.adoc
:xref-infra-providers: xref:cluster-deployment/infra-providers/infra-providers.adoc
:xref-hosted-k8s-clusters: xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
:xref-infra-aws: xref:cluster-deployment/infra-providers/aws/aws.adoc
:xref-deploy-gke: xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc
:xref-deploy-eks: xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc
:xref-deploy-aks: xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc
:xref-infra-azure: xref:cluster-deployment/infra-providers/azure/azure.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
:xref-infra-providers: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/index.adoc
:xref-hosted-k8s-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/index.adoc
:xref-infra-aws: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-an-amazon-ec2-cluster.adoc
:xref-deploy-gke: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/gke.adoc
:xref-deploy-eks: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/eks.adoc
:xref-deploy-aks: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/aks.adoc
:xref-infra-azure: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-an-azure-cluster.adoc
endif::[]

Drivers in Rancher allow you to manage which providers can be used to deploy {xref-hosted-k8s-clusters}[hosted Kubernetes clusters] or {xref-infra-providers}[nodes in an infrastructure provider] to allow Rancher to deploy and manage Kubernetes.

== Rancher Drivers

With Rancher drivers, you can enable/disable existing built-in drivers that are packaged in Rancher. Alternatively, you can add your own driver if Rancher has not yet implemented it.

There are two types of drivers within Rancher:

* <<_cluster_drivers,Cluster Drivers>>
* <<_node_drivers,Node Drivers>>

== Cluster Drivers

Cluster drivers are used to provision {xref-hosted-k8s-clusters}[hosted Kubernetes clusters], such as GKE, EKS, AKS, etc.. The availability of which cluster driver to display when creating a cluster is defined based on the cluster driver's status. Only `active` cluster drivers will be displayed as an option for creating clusters for hosted Kubernetes clusters. By default, Rancher is packaged with several existing cluster drivers, but you can also create custom cluster drivers to add to Rancher.

By default, Rancher has activated several hosted Kubernetes cloud providers including:

* {xref-deploy-eks}[Amazon EKS]
* {xref-deploy-gke}[Google GKE]
* {xref-deploy-aks}[Azure AKS]

== Node Drivers

Node drivers are used to provision hosts, which Rancher uses to launch and manage Kubernetes clusters. A node driver is the same as a https://github.com/docker/docs/blob/vnext-engine/machine/drivers/index.md[Docker Machine driver]. The availability of which node driver to display when creating node templates is defined based on the node driver's status. Only `active` node drivers will be displayed as an option for creating node templates. By default, Rancher is packaged with many existing Docker Machine drivers, but you can also create custom node drivers to add to Rancher.

If there are specific node drivers that you don't want to show to your users, you would need to de-activate these node drivers.

Rancher supports several major cloud providers, but by default, these node drivers are active and available for deployment:

* {xref-infra-aws}[Amazon EC2]
* {xref-infra-azure}[Azure]
* xref:cluster-deployment/infra-providers/digitalocean/digitalocean.adoc[Digital Ocean]
* xref:cluster-deployment/infra-providers/vsphere/vsphere.adoc[vSphere]

There are several other node drivers that are disabled by default, but are packaged in Rancher:

* {xref-harvester-overview}#_harvester_node_driver/[{harvester-product-name}], available as of Rancher v2.6.1
